--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                             academic institutions with complete testing facilities for determining, understanding and
                             analyzing the structural characteristics of Glass and Glazing products.</p>
                     </div>
-                    <div class="fact-counter">
+                    <!-- <div class="fact-counter">
                         <ul>
                             <li class="single-fact-counter">
                                 <div class="icon-holder"><span class="flaticon-avatar"></span></div>
@@ -261,7 +261,7 @@
                                 <h3>Projects Completed</h3>
                             </li>
                         </ul>
-                    </div>
+                    </div> -->
                 </div>
                 <!--End single tab content-->
                 <!--Start single tab content-->
@@ -274,36 +274,37 @@
                         <!--Start single accordion box-->
                         <div class="accordion accordion-block">
                             <div class="accord-btn">
-                                <h4>Working in Remote Environments</h4>
+                                <h4>Education</h4>
                             </div>
                             <div class="accord-content">
-                                <p>How all this mistaken idea of denouncing pleasure and praising pain was born and I
-                                    will give you a complete account of the system, and expound the actual teachings of
-                                    the great explorer of the truth.</p>
+                                <span class="text-justify">&#9642; Vision to create more engineering minds in the areas of glass façade engineering.</span> <br>
+                                <span class="text-justify">&#9642; Initiating paper presentations and mini projects for the B Tech and M Tech civil students on architectural glass and glazing systems.</span> <br>
+                                <span class="text-justify">&#9642; Organizing training programs for the B Tech and M Tech civil students to learn about the different types of glass buildings and its materials.</span>
                             </div>
                         </div>
                         <!--End single accordion box-->
                         <!--Start single accordion box-->
                         <div class="accordion accordion-block">
                             <div class="accord-btn">
-                                <h4>Minimizing the Harm of Hydrocarbons</h4>
+                                <h4>Research</h4>
                             </div>
                             <div class="accord-content">
-                                <p>How all this mistaken idea of denouncing pleasure and praising pain was born and I
-                                    will give you a complete account of the system, and expound the actual teachings of
-                                    the great explorer of the truth.</p>
+                                <span class="text-justify">&#9642; Supporting Bureau of Indian Standards in building code of practices for the use of structural glazing in the country through continuous research.</span> <br>
+                                <span class="text-justify">&#9642; Encouraging passionate PhD scholars ad M Tech students in the research of glass facade engineering.</span>
+
                             </div>
                         </div>
                         <!--End single accordion box-->
                         <!--Start single accordion box-->
                         <div class="accordion accordion-block">
                             <div class="accord-btn">
-                                <h4>Mineral extraction innovation</h4>
+                                <h4>Testing</h4>
                             </div>
                             <div class="accord-content">
-                                <p>How all this mistaken idea of denouncing pleasure and praising pain was born and I
-                                    will give you a complete account of the system, and expound the actual teachings of
-                                    the great explorer of the truth.</p>
+                                <span class="text-justify">&#9642; Introducing the Energy performance (Optical and Simulation) testing of Architectural Glass at SGRT with the support of Government, Glazing Society of India and its Industry members and partners.</span> <br>
+                                <span class="text-justify">&#9642; Augmenting the facility with the capacity for the testing of profiles (aluminium and uPVC) with the support of Glazing Society of India and its industry members and partners.</span> <br>
+                                <span class="text-justify">&#9642; Understanding the testing of the other allied materials of glazing such as structural sealants, interlayers, gaskets etc.</span>
+
                             </div>
                         </div>
                         <!--End single accordion box-->
@@ -504,136 +505,85 @@
                         <!--Start single testimonial item-->
                         <div class="single-testimonial-item">
                             <div class="text-box">
-                                <p>Explain to you how all this mistaken ideas of denouncing and praising pain was born
-                                    will give you a complete.</p>
+                                <p>Installation of a new testing facility for Mirror glass.</p>
                             </div>
                             <div class="img-box">
-                                <img src="img/customers/1.png" alt="Client Photo">
+                                <img src="img/latest-news/Picture1.jpg" alt="Client Photo">
                             </div>
-                            <div class="title-box text-center">
+                            <!-- <div class="title-box text-center">
                                 <h4>William Susante</h4>
                                 <p>ECo System</p>
-                            </div>
+                            </div> -->
                         </div>
                         <!--End single testimonial item-->
                         <!--Start single testimonial item-->
                         <div class="single-testimonial-item">
                             <div class="text-box">
-                                <p>Undertakes laborious physical exercise too to obtain some advantages from it but to
-                                    enjoy a pleasure workers.</p>
+                                <p>Professors and Students from different states of India and different countries visited SGRT.</p>
                             </div>
                             <div class="img-box">
-                                <img src="img/customers/2.png" alt="Client Photo">
+                                <img src="img/latest-news/Picture2.jpg" alt="Client Photo">
                             </div>
-                            <div class="title-box text-center">
+                            <!-- <div class="title-box text-center">
                                 <h4>John Meckency</h4>
                                 <p>Villo Steels</p>
-                            </div>
+                            </div> -->
                         </div>
                         <!--End single testimonial item-->
                         <!--Start single testimonial item-->
                         <div class="single-testimonial-item">
                             <div class="text-box">
-                                <p>How all this mistaken of denouncing pleasure and praising pain was born and will give
-                                    you a complete expound.</p>
+                                <p>Ms Sasi Regama M, an UG student has undergone a training session at SGRT for 15 days under the guidance of Prof (Dr) Alagappan Ponnalagu, IIT Madras.</p>
                             </div>
                             <div class="img-box">
-                                <img src="img/customers/3.png" alt="Client Photo">
+                                <img src="img/latest-news/Picture3.jpg" alt="Client Photo">
                             </div>
-                            <div class="title-box text-center">
+                            <!-- <div class="title-box text-center">
                                 <h4>Thomas Fernando</h4>
                                 <p>Future Theme</p>
-                            </div>
+                            </div> -->
                         </div>
                         <!--End single testimonial item-->
                         <!--Start single testimonial item-->
                         <div class="single-testimonial-item">
                             <div class="text-box">
-                                <p>Explain to you how all this mistaken ideas of denouncing and praising pain was born
-                                    will give you a complete.</p>
+                                <p>SGRT visits Winwall’s testing facility.</p>
                             </div>
                             <div class="img-box">
-                                <img src="img/customers/1.png" alt="Client Photo">
+                                <img src="img/latest-news/Picture4.jpg" alt="Client Photo">
                             </div>
-                            <div class="title-box text-center">
+                            <!-- <div class="title-box text-center">
                                 <h4>William Susante</h4>
                                 <p>ECo System</p>
-                            </div>
+                            </div> -->
                         </div>
                         <!--End single testimonial item-->
                         <!--Start single testimonial item-->
                         <div class="single-testimonial-item">
                             <div class="text-box">
-                                <p>Undertakes laborious physical exercise too to obtain some advantages from it but to
-                                    enjoy a pleasure workers.</p>
+                                <p>CSIR-CECRI scientists visited SGRT.</p>
                             </div>
                             <div class="img-box">
-                                <img src="img/customers/2.png" alt="Client Photo">
+                                <img src="img/latest-news/Picture5.jpg" alt="Client Photo">
                             </div>
-                            <div class="title-box text-center">
+                            <!-- <div class="title-box text-center">
                                 <h4>John Meckency</h4>
                                 <p>Villo Steels</p>
-                            </div>
+                            </div> -->
                         </div>
                         <!--End single testimonial item-->
                         <!--Start single testimonial item-->
                         <div class="single-testimonial-item">
                             <div class="text-box">
-                                <p>How all this mistaken of denouncing pleasure and praising pain was born and will give
-                                    you a complete expound.</p>
+                                <p>Professionals from L&T visited SGRT.</p>
                             </div>
                             <div class="img-box">
-                                <img src="img/customers/3.png" alt="Client Photo">
+                                <img src="img/latest-news/Picture6.jpg" alt="Client Photo">
                             </div>
-                            <div class="title-box text-center">
+                            <!-- <div class="title-box text-center">
                                 <h4>Thomas Fernando</h4>
                                 <p>Future Theme</p>
-                            </div>
-                        </div>
-                        <!--End single testimonial item-->
-                        <!--Start single testimonial item-->
-                        <div class="single-testimonial-item">
-                            <div class="text-box">
-                                <p>Explain to you how all this mistaken ideas of denouncing and praising pain was born
-                                    will give you a complete.</p>
-                            </div>
-                            <div class="img-box">
-                                <img src="img/customers/1.png" alt="Client Photo">
-                            </div>
-                            <div class="title-box text-center">
-                                <h4>William Susante</h4>
-                                <p>ECo System</p>
-                            </div>
-                        </div>
-                        <!--End single testimonial item-->
-                        <!--Start single testimonial item-->
-                        <div class="single-testimonial-item">
-                            <div class="text-box">
-                                <p>Undertakes laborious physical exercise too to obtain some advantages from it but to
-                                    enjoy a pleasure workers.</p>
-                            </div>
-                            <div class="img-box">
-                                <img src="img/customers/2.png" alt="Client Photo">
-                            </div>
-                            <div class="title-box text-center">
-                                <h4>John Meckency</h4>
-                                <p>Villo Steels</p>
-                            </div>
-                        </div>
-                        <!--End single testimonial item-->
-                        <!--Start single testimonial item-->
-                        <div class="single-testimonial-item">
-                            <div class="text-box">
-                                <p>How all this mistaken of denouncing pleasure and praising pain was born and will give
-                                    you a complete expound.</p>
-                            </div>
-                            <div class="img-box">
-                                <img src="img/customers/3.png" alt="Client Photo">
-                            </div>
-                            <div class="title-box text-center">
-                                <h4>Thomas Fernando</h4>
-                                <p>Future Theme</p>
-                            </div>
+                            </div> -->
                         </div>
                         <!--End single testimonial item-->
                     </div>
