--- a/training-industrial-visit-awareness.html
+++ b/training-industrial-visit-awareness.html
@@ -124,33 +124,40 @@
                                                 <li>
                                                     <div class="single-item">
                                                         <div class="year">
-                                                            <h5>1992</h5>
+                                                            <h5>2022</h5>
                                                         </div>
                                                         <div class="img-text-holder">
                                                             <div class="img-holder">
                                                                 <img src="img/about/tab/1.jpg" alt="Awesome Image">
                                                             </div>
                                                             <div class="text-holder">
-                                                                <h3>Started at Newyork City</h3>
+                                                                <span class="text-justify">&#9642; Prof Tar Thai with prof Arul S Jayachandran visited SGRT on 12.09.2022.</span> <br>
+                                                                <span class="text-justify">&#9642; Prof Arun Menon with his students visited SGRT for training on Glass types and its different testing facilities on 11.08.2022.</span> <br>
+                                                                <span class="text-justify">&#9642; Trainees from Nagaland visited SGRT on 15.06.2022.</span> <br>
+                                                                <span class="text-justify">&#9642; SGRT Team and GSI visited Winwall’s Testing facility on 04.05.2022.</span> <br>
+                                                                <span class="text-justify">&#9642; Students from Kerala visited SGRT on 22.04.2022.</span>
+                                                                <!-- <h3>Started at Newyork City</h3>
                                                                 <p>Explain to you how all this mistaken idea of our was
                                                                     born and I will give
-                                                                    you a complete.</p>
+                                                                    you a complete.</p> -->
                                                             </div>
                                                         </div>
                                                     </div>
                                                     <div class="single-item">
                                                         <div class="year">
-                                                            <h5>1995</h5>
+                                                            <h5>2021</h5>
                                                         </div>
                                                         <div class="img-text-holder">
                                                             <div class="img-holder">
                                                                 <img src="img/about/tab/2.jpg" alt="Awesome Image">
                                                             </div>
                                                             <div class="text-holder">
-                                                                <h3>First recognition</h3>
-                                                                <p>Who loves or pursues or desires to obtain pain of
-                                                                    itselfit sed is pain
-                                                                    circumstances.</p>
+                                                                <span class="text-justify">&#9642; GIZ project head and team with GSI visited SGRT on 28.12.2021.</span> <br>
+                                                                <span class="text-justify">&#9642; CSIR-CECRI Scientists visited SGRT on 13.12.2021.</span> <br>
+                                                                <span class="text-justify">&#9642; Prof Rupen Goswami and Prof C V R Murthy visited SGRT on 03.12.2021.</span> <br>
+                                                                <span class="text-justify">&#9642; Ms Sneha and Mr Prakash from L &amp; T visited SGRT on 22.11.2021.</span> <br>
+                                                                <span class="text-justify">&#9642; Ar Deepashree &amp; Deputy General Manager, Mr S. Roopesh from L &amp; T visited SGRT on 17.11.2021.</span> <br>
+                                                                <span class="text-justify">&#9642; CSIR- SERC scientists – Mr Saravanan and Mr Surender visited SGRT on 08.09.2021.</span> 
                                                             </div>
                                                         </div>
                                                     </div>
@@ -158,33 +165,88 @@
                                                 <li>
                                                     <div class="single-item">
                                                         <div class="year">
-                                                            <h5>1992</h5>
+                                                            <h5>2018</h5>
                                                         </div>
                                                         <div class="img-text-holder">
                                                             <div class="img-holder">
                                                                 <img src="img/about/tab/1.jpg" alt="Awesome Image">
                                                             </div>
                                                             <div class="text-holder">
-                                                                <h3>Started at Newyork City</h3>
-                                                                <p>Explain to you how all this mistaken idea of our was
-                                                                    born and I will give
-                                                                    you a complete.</p>
+                                                                <span class="text-justify">&#9642; Visit by Prof T Matsumoto and Dr A Ravankar, Hokkaido University on 30.01.2018.</span> <br>
+                                                                <span class="text-justify">&#9642; Mr Vivek Buch, Technical Head and Mr Chirag Patel, Technical support visited SGRT on 05.01.2018.</span> 
                                                             </div>
                                                         </div>
                                                     </div>
                                                     <div class="single-item">
                                                         <div class="year">
-                                                            <h5>1995</h5>
+                                                            <h5>2017</h5>
                                                         </div>
                                                         <div class="img-text-holder">
                                                             <div class="img-holder">
                                                                 <img src="img/about/tab/2.jpg" alt="Awesome Image">
                                                             </div>
                                                             <div class="text-holder">
-                                                                <h3>First recognition</h3>
-                                                                <p>Who loves or pursues or desires to obtain pain of
-                                                                    itselfit sed is pain
-                                                                    circumstances.</p>
+                                                                <span class="text-justify">&#9642; Visit by Er Sonam Wangchuk, Magsaysay Award winner, 2018 on 17.08.2017.</span> <br>
+                                                                <span class="text-justify">&#9642; Internship for students from 13.06.2017 to 13.07.2017.</span> <br>
+                                                                <span class="text-justify">&#9642; Ms Federica Greco from Getty Conservation Institute USA visited SGRT on 09.06.2017.</span> <br>
+                                                                <span class="text-justify">&#9642; Visitors from CEPT University visited SGRT ON 31.03.2017.</span> <br>
+                                                                <span class="text-justify">&#9642; SGRT had visitors from Geological Department, IIT-M.</span> <br>
+                                                                <span class="text-justify">&#9642; Scientists from CSIR-CGCRI, Kolkata visited SGRT on 04.03.2017.</span> <br>
+                                                                <span class="text-justify">&#9642; Mr Sivaram from International Finance Corporation visited SGRT on 20.02.2017.</span> <br>
+                                                                <span class="text-justify">&#9642; Engineers from L &amp; T visited SGRT on 31.01.2017.</span>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                    <div class="single-item">
+                                                        <div class="year">
+                                                            <h5>2016</h5>
+                                                        </div>
+                                                        <div class="img-text-holder">
+                                                            <div class="img-holder">
+                                                                <img src="img/about/tab/2.jpg" alt="Awesome Image">
+                                                            </div>
+                                                            <div class="text-holder">
+                                                                <span class="text-justify">&#9642; Director from CEPT University, Ahmedabad visited SGRT on 26.12.2016.</span> <br>
+                                                                <span class="text-justify">&#9642; Visitors of Prof Amalan Kumar Sengupta visited SGRT on 23.12.2016.</span> <br>
+                                                                <span class="text-justify">&#9642; Visitors of Prof Arun Menon visited SGRT on 08.12.2016.</span> <br>
+                                                                <span class="text-justify">&#9642; Prof Leroy Gardner from Imperial college of London visited SGRT on 29.11.2016.</span> <br>
+                                                                <span class="text-justify">&#9642; Engineers from Archaeological department, Chennai visited SGRT on 07.10.2016.</span> <br>
+                                                                <span class="text-justify">&#9642; Conducted a Seminar on ‘Design and challenges in glass facades in buildings’ – Sustainability in Safety and Energy Performance on 29.09.2016.</span> <br>
+                                                                <span class="text-justify">&#9642; Mr Bharat, Velox Ingenium, Hyderabad visisted SGRT on 15.09.2016.</span> <br>
+                                                                <span class="text-justify">&#9642; Visitors from GSI visited on 13.09.2016.</span> <br>
+                                                                <span class="text-justify">&#9642; Dr K Muraleedharan, Director, CSIR-CGCRI, Kolkata visited on 12.09.2016.</span> <br>
+                                                                <span class="text-justify">&#9642; M Tech students from Thiruvananthapuram visited SGRT on 08.08.2016.</span> <br>
+                                                                <span class="text-justify">&#9642; Internship provided for students from Mar Athanasius College of Engineering, Kerala on 27.07.2016.</span> <br>
+                                                                <span class="text-justify">&#9642; Scientists from CSIR-CGCRI, Kolkata visited SGRT on 27.07.2016.</span> <br>
+                                                                <span class="text-justify">&#9642; Mr Dave Lee, Market Development Manager – Asia Pacific and team, Eastman visited SGRT on 15.07.2016.</span> <br>
+                                                                <span class="text-justify">&#9642; SGRT had visitors from MERO Asia Pacific Ltd on 30.06.2016.</span> <br>
+                                                                <span class="text-justify">&#9642; Prof Arun Menon and his team visited SGRT on 05.04.2016.</span> <br>
+                                                                <span class="text-justify">&#9642; SGRT team and GSI team participated in the Fensterbau Frontale 2016 from 25.02.2016 to 27.02.2016.</span> <br>
+                                                                <span class="text-justify">&#9642; Mr Shyambilas Mishra, Head- Process Development, System &amp; Technical Support, AIS Ltd visited SGRT on 12.02.2016.</span>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                    <div class="single-item">
+                                                        <div class="year">
+                                                            <h5>2015</h5>
+                                                        </div>
+                                                        <div class="img-text-holder">
+                                                            <div class="img-holder">
+                                                                <img src="img/about/tab/2.jpg" alt="Awesome Image">
+                                                            </div>
+                                                            <div class="text-holder">
+                                                                <span class="text-justify">&#9642; Mr Julian Mcinerney, Director of the UK Awarding Body – Glass Sector, The vocational College visited on 06.11.2015.</span> <br>
+                                                                <span class="text-justify">&#9642; Mrs Bini T I,D G M – Civil, Cochin International Airport Limited, Mr Robin C Johny, Senior Consultant, KITCO Ltd and Mr Ramesh Kommana, Director, Satya Surya Aluminium Industries visited on 30.10.2015.</span> <br>
+                                                                <span class="text-justify">&#9642; Ar Pradeep Varma, Principal Architect, Varsha and Pradeep Architects visited on 30.09.2015.</span> <br>
+                                                                <span class="text-justify">&#9642; B Tech students, scholars and PhD students from structural engineering department visited TPRS Enterprises Pvt Ltd, Puducherry on 19.09.2015 to understand the architectural glass processing.</span> <br>
+                                                                <span class="text-justify">&#9642; Delegation from GSI Members led by Mr Rupinder Shelly, Treasurer visited on 11.09.2015.</span> <br>
+                                                                <span class="text-justify">&#9642; Mr Y P Sinngh, President – India, Fenesta Building Systems &amp; Convener – Windows Committee, GSI and Founder President, UWDMA (uPVC Windows and Doors Manufacturers Association) visited on 11.06.2015.</span> <br>
+                                                                <span class="text-justify">&#9642; Mr Srinivas Rao Manne, A G M, (Engg-Civil), Mr Murali Krishna, Manager (Engg-Civil) and team, Airport Authority of India, Tirupati Airport visited on 14.05.2015.</span> <br>
+                                                                <span class="text-justify">&#9642; Mr V B Sud, Country Head, Eastman India Pvt ltd visited on 29.04.2015.</span> <br>
+                                                                <span class="text-justify">&#9642; Mr Sharma, L &amp; T visited SGRT on 22.04.2015.</span> <br>
+                                                                <span class="text-justify">&#9642; Mr Chandramouli, DGM Engg Civil, Airport Authority of India, Vizag Airport visited on 10.04.2015.</span> <br>
+                                                                <span class="text-justify">&#9642; Dr Winfried Heusler, Senior Vice President, Corporate Building Excellence, Schuco International KG visited SGRT on 09.04.2015.</span> <br>
+                                                                <span class="text-justify">&#9642; Mr V L N Sastry, AGM Engg Civil, Airport Authority of India, Vizag Airport visited on 09.04.2015.</span>
                                                             </div>
                                                         </div>
                                                     </div>
